@@ -192,10 +192,20 @@ Shorewall 4.4.3
 
 4)  Nested zones where the parent zone was defined by a wilecard
     interface (name ends with +) in /etc/shorewall/interfaces did
-    not work correctly in all cases.
+    not work correctly in some cases.
 
 5)  IPv4 addresses embedded in IPv6 (e.g., ::192.168.1.5) were
     incorrectly reported as invalid.
+
+6)  The messages issued when an optional provider was not usable were
+    confusing; the message intended to be issued when the provider
+    shared an interface (WARNING: Gateway <gateway> is not reachable --
+    Provider <name> (<number>) not Added) was being issued when the
+    provider did not share an interface. Similarly, the message
+    intended to be issued when the provider did not share an interface
+    (WARNING: Interface <interface> is not usable -- Provider <name>
+    (<number>) not Added) was being issued when the provider did share
+    an interface.
 
 ----------------------------------------------------------------------------
              K N O W N   P R O B L E M S   R E M A I N I N G
