@@ -22,6 +22,10 @@ Changes in Shorewall 4.4.3
 
 11)  Fix IPv6 address parsing bug.
 
+12)  Add hack to work around iproute IPv6 bug in route handling
+
+13)  Correct messages issued when an optional provider is not usable.
+
 Changes in Shorewall 4.4.2
 
 1)  BUGFIX: Correct detection of Persistent SNAT support
